fix: :lipstick: Wrap long links to prevent mobile overflow.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,11 @@
     height: auto;
   }
 
+  .prose :where(a, p, li) {
+    overflow-wrap: break-word;
+    word-break: break-word;
+  }
+
   .prose :where(span[data-rehype-pretty-code-figure]) > code {
     background-color: rgb(243 244 246) !important;
     color: rgb(17 17 17) !important;
